# CMU-LCAL-1st-year-benchmark

./: .gitignore  pyproject.toml
data/processed/: additional_ancestry_search_result.csv  additional_apa_ancestry_search_result.csv  additional_applied_linguistics_manual_search_result.csv  additional_db_manual_search_records.csv  additional_db_search_records.csv  additional_manual_search_merged_unique.csv  ancestry_search_result.csv  apa_ancestry_search_result.csv  applied_linguistics_manual_search_result.csv  db_search_merged_unique.csv  db_search_records.csv  forward_search_result.csv  google_scholar_result.csv  intercultural_pragmatics_manual_search_result.csv  manual_search_merged_unique.csv
data/raw/: additional_ancestry_target_paper_list.csv  ancestry_target_paper_list.csv  forward_target_paper_list.csv  google_scholar_search_keyword.json
data/raw/google_search_bkup/: 語用論 AND (第二言語としての日本語 OR 外国語としての日本語) AND (教育 OR 指導)_0.json  (+12 more)
src/cmu_lcal_1st_year_benchmark/: __init__.py  ancestry_search.py  config.py  convert_apa_2_meta_info.py  forward_search.py  frequency_analysis_converted_codes.ipynb  frequency_analysis_raw_codes.ipynb  google_scholar_search.py  mearge_manual_search_results.py  merge_db_manual_search_results.py  organize_db_result_for_manual_dup_remove.py  re_ancestry_search.py  re_convert_apa_2_meta_info.py  re_mearge_manual_search_results.py  re_merge_db_manual_search_results.py  re_organize_db_result_for_manual_dup_remove.py  re_scrape_applied_linguistics.py  scrape_applied_linguistics.py  scrape_intercultural_pragmatics.py  summarize_db_result.py
