[project]
name = "cmu-lcal-1st-year-benchmark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "RusCucumber", email = "w.d.ryu.m@gmail.com" }
]
dependencies = [
    "semanticscholar>=0.10.0",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "pandas-stubs>=2.2.3.250308",
    "types-tqdm>=4.67.0.20250401",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cmu_lcal_1st_year_benchmark"]

[tool.ruff]
target-version = "py311"
line-length = 119
exclude = [".mypy_cache"]
 
[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E203"]
